fixed news card text overflow in small media

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -434,6 +434,16 @@ main .sidebar {
     #data-display {
         flex-direction: column;
     }
+
+    .news-author {
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .news-container {
+        height: auto;
+        width: auto;
+    }
 }
 
 
